# VMware-Pilot

./: .gitignore  Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  config.example.yaml  pyproject.toml  server.json  smithery.yaml
docs/: architecture-audit-2026-04-30.md  aria-pilot-boundary.md
examples/mcp-configs/: claude-code.json
mcp_server/: __main__.py  _catalog.py  _shared.py  server.py
mcp_server/tools/: __init__.py  authoring.py  lifecycle.py  query.py
skills/vmware-pilot/: SKILL.md
skills/vmware-pilot/evals/: evals.json
skills/vmware-pilot/references/: agent-guardrails.md  capabilities.md  cli-reference.md  integration-patterns.md  setup-guide.md  templates.md  workflow-design.md
skills/vmware-pilot/scripts/: list_available_tools.py  validate_workflow.py
tests/: test_executor.py  test_models.py  test_no_destructive_ops.py  test_review.py  test_safe_error_passthrough.py  test_server.py  test_templates.py
tests/eval/capability/: _scores.json  _skill.py
tests/eval/regression/: test_cli_writes_guarded.py  test_declared_environment.py  test_read_only_mode.py
vmware_pilot/: __init__.py  cli.py  custom_loader.py  executor.py  models.py  review.py  templates.py
vmware_pilot/mcp_server/: __main__.py  _shared.py  server.py
vmware_pilot/mcp_server/tools/: __init__.py  authoring.py  lifecycle.py  query.py
vmware_pilot/templates/: __init__.py  _common.py  baseline.py  k8s.py  monitoring.py  network.py  storage.py  vm.py
