[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vmware-pilot"
version = "1.5.11"
description = "VMware workflow orchestration — multi-step state machine with approval gates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Wei Zhou", email = "wei-wz.zhou@broadcom.com" }]
dependencies = [
    "vmware-policy>=1.0.0,<2.0",
    "mcp[cli]>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
vmware-pilot-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["vmware_pilot", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
]
